Fix install Playwright browsers

--- a/.github/workflows/daily-price-check.yaml
+++ b/.github/workflows/daily-price-check.yaml
@@ -23,5 +23,8 @@ jobs:
       - name: Install dependencies
         run: pip install -r src/anatae/requirements.txt
 
+      - name: Install Playwright browsers
+        run: playwright install
+
       - name: Run Python script
         run: python src/anatae/price_check.py
